sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: value &&! is not a member of Boolean
    while(j>=0&&!fini){ 
              ^